# bank-system-tp-project

./: .gitignore  .gitlab-ci.yml  BankSystemClassDiagram.mdj  CMakeLists.txt  Dockerfile  README.md  create_class_diagrams.sh  install.sh  run.sh
Account/: Account.cpp  Account.hpp  AccountFactory.cpp  AccountFactory.hpp  CMakeLists.txt  CreditAccount.cpp  CreditAccount.hpp  CreditAccountFactory.cpp  CreditAccountFactory.hpp  DebitAccount.cpp  DebitAccount.hpp  DebitAccountFactory.cpp  DebitAccountFactory.hpp  DepositAccount.cpp  DepositAccount.hpp  DepositAccountFactory.cpp  DepositAccountFactory.hpp
Bank/: Bank.cpp  Bank.hpp  CMakeLists.txt
BankSystemMain/: BankSystemMain.cpp  BankSystemMain.hpp
Connection/: CMakeLists.txt  Colleague.cpp  Colleague.hpp  Connection.hpp  P2PConnection.cpp  P2PConnection.hpp
DataTypes/: AccountSpecification.hpp  AccountType.cpp  AccountType.hpp  Address.hpp  CMakeLists.txt  Date.hpp  DateWithTime.hpp  FacadeStatus.cpp  FacadeStatus.hpp  Hash.cpp  Hash.hpp  Menu.hpp  Operation.cpp  Operation.hpp  Passport.hpp  TransactionStatus.cpp  TransactionStatus.hpp  UserProfile.hpp  UserType.cpp  UserType.hpp
Facade/: CMakeLists.txt  Facade.cpp  Facade.hpp
Transaction/: CMakeLists.txt  Command.hpp  GetAccountInfoCommand.cpp  GetAccountInfoCommand.hpp  ReplenishmentCommand.cpp  ReplenishmentCommand.hpp  Transaction.cpp  Transaction.hpp  TransferCommand.cpp  TransferCommand.hpp  WithdrawalCommand.cpp  WithdrawalCommand.hpp
User/: CMakeLists.txt  ClientUser.cpp  ClientUser.hpp  User.cpp  User.hpp  WorkerUser.cpp  WorkerUser.hpp
UserInterface/: CMakeLists.txt  Interface.cpp  Interface.hpp
tests/: CMakeLists.txt
tests/AccountTest/: AccountTestCase.cpp  AccountTestCase.hpp  CMakeLists.txt
tests/BankTest/: BankTestCase.cpp  BankTestCase.hpp  CMakeLists.txt
tests/UserTest/: CMakeLists.txt  UserTestCase.cpp  UserTestCase.hpp
