add_library(Transaction
    SHARED
    Command.cpp
    Command.hpp
    GetAccountInfoCommand.cpp 
    GetAccountInfoCommand.hpp
    ReplenishmentCommand.cpp
    ReplenishmentCommand.hpp
    Transaction.cpp
    Transaction.hpp
    TransferCommand.cpp
    TransferCommand.hpp
    WithdrawalCommand.cpp
    WithdrawalCommand.hpp
)


